<resources>
    <string name="app_name">Movies_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="up_coming_movies">Up Coming Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="show_all">Show All</string>
    <string name="try_again">Try Again</string>
    <string name="unknown">UnKnown</string>
    <string name="user_n_score">User \n Score</string>
    <string name="director">Director</string>
    <string name="screenplay">Screenplay</string>
    <string name="story">Story</string>
    <string name="release_date">Release Date</string>
    <string name="run_time">Run Time</string>
    <string name="status">Status</string>
    <string name="over_view">Over View</string>
    <string name="casts">Casts</string>
    <string name="recommendations">Recommendations</string>
    <string name="search_icon">Search Icon</string>
    <string name="error">error</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="internet_connection_lost">Internet Connection Lost</string>
    <string name="no_internet">No Internet</string>
    <string name="actor_image">Actor Image</string>
    <string name="known_for">Known For </string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="biography">Biography</string>
    <string name="background">background</string>
    <string name="retry">retry</string>
    <string name="movie_poster">Movie Poster</string>
</resources>