<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFlipperMovieDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appLoadingLayoutMovieDetails"
        layout="@layout/app_loading_screen" />

    <include
        android:id="@+id/errorLayoutMovieDetails"
        layout="@layout/app_error_layout" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movieDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieDetailsConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.MoviesDetails.MovieDetailsFragment">

            <ImageView
                android:id="@+id/background_Image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/background"
                android:scaleType="fitXY"
                android:src="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieDetailsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headMargin"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginEnd="@dimen/headMargin"
                android:text="@string/unknown"
                android:textColor="@color/black"
                android:textSize="@dimen/headFontSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailsPoster"
                app:layout_constraintTop_toBottomOf="@+id/background_Image" />

            <TextView
                android:id="@+id/movieDetailsGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headMargin"
                android:layout_marginTop="@dimen/headMargin"
                android:layout_marginEnd="@dimen/headMargin"
                android:text="@string/unknown"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDetailsPoster"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailsTitle" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:text="@string/user_n_score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/MovieDetailsPieChart"
                app:layout_constraintStart_toEndOf="@+id/MovieDetailsPieChart"
                app:layout_constraintTop_toTopOf="@+id/MovieDetailsPieChart" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="textView7,textView5,textView6,MovieDetailsScreenPlayName,MovieDetailsStoryName,MovieDetailsDirectorName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/director"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/MovieDetailsDirectorName"
                app:layout_constraintStart_toStartOf="@+id/MovieDetailsDirectorName"
                app:layout_constraintTop_toBottomOf="@+id/barrier" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallMargin"
                android:text="@string/screenplay"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="@+id/MovieDetailsScreenPlayName"
                app:layout_constraintStart_toStartOf="@+id/MovieDetailsScreenPlayName"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:barrierMargin="@dimen/smallMargin"
                app:constraint_referenced_ids="movieDetailsPoster,MovieDetailsPieChart,textView4,movieDetailsGenres,movieDetailsTitle" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/story"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/MovieDetailsStoryName"
                app:layout_constraintStart_toStartOf="@+id/MovieDetailsStoryName"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/MovieDetailsPieChart"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/headMargin"
                android:layout_marginTop="@dimen/smallMargin"
                app:layout_constraintStart_toStartOf="@+id/movieDetailsGenres"
                app:layout_constraintTop_toBottomOf="@+id/movieDetailsGenres" />

            <TextView
                android:id="@+id/MovieDetailsDirectorName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginEnd="@dimen/smallMargin"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/midFontSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/MovieDetailsScreenPlayName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/MovieDetailsScreenPlayName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/smallMargin"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/midFontSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/MovieDetailsStoryName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/MovieDetailsDirectorName"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/MovieDetailsStoryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/smallMargin"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/midFontSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/MovieDetailsScreenPlayName"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/release_date"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/MovieDetailsDirectorName"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrier3" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_time"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/MovieDetailsScreenPlayName"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/MovieDetailsScreenPlayName"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/MovieDetailsStoryName"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/movieDetailsPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headMargin"
                android:fadingEdge="horizontal"
                android:paddingTop="@dimen/headMargin"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="@+id/background_Image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/background_Image"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

            <TextView
                android:id="@+id/MovieDetailsReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/unknown"
                android:textColor="@color/black"
                android:textSize="@dimen/midFontSize"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/MovieDetailsRunTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/unknown"
                android:textColor="@color/black"
                android:textSize="@dimen/midFontSize"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/MovieDetailsStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/unknown"
                android:textColor="@color/black"
                android:textSize="@dimen/midFontSize"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/over_view"
                android:textColor="@color/black"
                android:textSize="@dimen/headFontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MovieDetailsReleaseDate" />

            <TextView
                android:id="@+id/MovieDetailsOverView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headMargin"
                android:layout_marginEnd="@dimen/headMargin"
                android:text="@string/unknown"

                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headMargin"
                android:text="@string/casts"
                android:textColor="@color/black"
                android:textSize="@dimen/headFontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MovieDetailsOverView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headMargin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/headMargin"
                android:text="@string/recommendations"
                android:textColor="@color/black"
                android:textSize="@dimen/headFontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/castRV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieRecommendationRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/headMargin"
                android:layout_marginTop="@dimen/headMargin"
                android:layout_marginEnd="@dimen/headMargin"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</ViewFlipper>